src/objects/MDM_EnterpriseNumberSeeder__c.object
<CustomObject>
    <fields>
        <fullName>CurrentSeedNumber__c</fullName>
        <label>CurrentSeedNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDPrefix__c</fullName>
        <label>IDPrefix</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeedKey__c</fullName>
        <externalId>true</externalId>
        <label>SeedKey</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MDM_EnterpriseNumberSeeder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CurrentSeedNumber__c</columns>
        <columns>Description__c</columns>
        <columns>IDPrefix__c</columns>
        <columns>SeedKey__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EID-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDMEnterpriseNumberSeeder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>